--- a/homework/Day-7/css/bai2.css
+++ b/homework/Day-7/css/bai2.css
@@ -1,6 +1,6 @@
 .box {
   position: relative;
-  background-image: url("http://uiwebsoft.com/justlog/login-one/images/login-bg2.jpg");
+  background-image: url("/homework/Day-7/image/login-bg2.jpeg");
   background-size: cover;
   background-position: center;
   height: 100vh;
