Nộp bài tập ngày 7

--- a/homework/Day-7/css/bai2.css
+++ b/homework/Day-7/css/bai2.css
@@ -1,4 +1,10 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .box {
+  background: url(http://uiwebsoft.com/justlog/login-one/images/login-bg2.jpg);
   position: relative;
   height: 100vh;
   color: #272323;
@@ -41,8 +47,8 @@
   text-align: center;
   font-size: 15px;
   padding: 6px 10px;
-  top: 45%;
-  left: 43%;
+  top: 40%;
+  left: 35%;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
