--- a/homework/Day-7/css/bai2.css
+++ b/homework/Day-7/css/bai2.css
@@ -4,12 +4,15 @@
   box-sizing: border-box;
 }
 .box {
-  background: url(http://uiwebsoft.com/justlog/login-one/images/login-bg2.jpg);
+  background: url(../image/login-bg2.jpeg) no-repeat;
   position: relative;
   height: 100vh;
   color: #272323;
   font-family: "Nunito Sans", sans-serif;
   border: 1px solid transparent;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .sub_box {
