--- a/homework/Day-8/css/bai1.css
+++ b/homework/Day-8/css/bai1.css
@@ -8,9 +8,10 @@
 .box {
   background: url(https://cdn.houseviet.vn/images/project/23042023/ha-noi-melody-residences-cover.jpg)
     no-repeat;
-  width: 100%;
+
   height: 100%;
   position: fixed;
+  width: 1467px;
 }
 .box .inner-box .content {
   position: absolute;
