--- a/homework/Day-8/css/bai1.css
+++ b/homework/Day-8/css/bai1.css
@@ -8,18 +8,19 @@
 .box {
   background: url(https://cdn.houseviet.vn/images/project/23042023/ha-noi-melody-residences-cover.jpg)
     no-repeat;
-
-  height: 100%;
-  position: fixed;
   width: 1467px;
+  height: 900px;
+  position: fixed;
 }
 .box .inner-box .content {
-  position: absolute;
-  width: 44%;
-  height: 23%;
+  position: relative;
+}
+.box .inner-box .inner-content {
+  position: fixed;
+  width: 630px;
   background: white;
-  top: 20%;
-  left: 15%;
+  top: 120px;
+  left: 200px;
   opacity: 0.8;
   border-radius: 5px;
   padding: 20px;
@@ -37,10 +38,12 @@
   background: #bf4240;
   border: 1px solid transparent;
   color: white;
-  position: absolute;
+  position: fixed;
   z-index: 99;
-  padding: 10px 20px;
+  padding: 10px 10px;
+  width: 120px;
   font-weight: 700;
-  top: 350px;
+  top: 300px;
   left: 700px;
+  text-align: center;
 }
