--- a/onl/Bai11/css/style.css
+++ b/onl/Bai11/css/style.css
@@ -235,3 +235,186 @@
   }
 }
 /* End Section-two */
+
+/* Section three */
+.section-three {
+  background-color: var(--color-backgroundone);
+  height: 700px;
+}
+
+.section-three .inner-box {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  top: 150px;
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  padding: 50px;
+  border-radius: 10px;
+}
+.section-three .inner-box .inner-content {
+  width: 50%;
+}
+.section-three .inner-box .inner-content p {
+  color: gray;
+  font-weight: 700;
+}
+.section-three .inner-box .inner-content h3 {
+  font-size: 70px;
+  font-weight: 700;
+}
+.section-three .inner-box .inner-image img {
+  width: 30%;
+  height: auto;
+  background-size: cover;
+  position: absolute;
+  bottom: 0;
+  right: 50px;
+  border-radius: 10px;
+}
+/* End section three */
+
+/* Section four */
+.section-four {
+  margin: 80px 0;
+  color: gray;
+}
+.section-four .inner-content h3 {
+  color: #000;
+  font-size: 30px;
+  margin-bottom: 30px;
+}
+.section-four .inner-content p {
+  font-size: 18px;
+  margin-bottom: 30px;
+  line-height: 1.5;
+}
+.section-four .inner-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+.section-four .inner-list .item {
+  width: calc(100% / 3 - 30px);
+  height: auto;
+}
+.section-four .inner-list .item i {
+  border: 1px solid transparent;
+  border-radius: 50%;
+  padding: 10px;
+  background-color: var(--color-backgroundone);
+  margin-bottom: 20px;
+  margin-right: 10px;
+}
+.section-four .inner-list .item span {
+  font-size: 18px;
+}
+/*  End section four */
+/* Section five */
+.section-five {
+  padding: 80px 0;
+  background-color: var(--color-backgroundone);
+}
+.section-five .inner-title {
+  font-size: 45px;
+  text-align: center;
+  padding: 30px 0;
+}
+.section-five .inner-list {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.section-five .inner-list .inner-box {
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.section-five .inner-list .inner-box .inner-image {
+  width: 300px;
+  height: 220px;
+  overflow: hidden;
+}
+
+.section-five .inner-list .inner-box .inner-image img {
+  width: 300px;
+  background-size: contain;
+}
+.section-five .inner-list .inner-box .inner-content {
+  width: 300px;
+  height: 100px;
+  background-color: #fff;
+  padding: 20px;
+  position: relative;
+}
+.section-five .inner-list .inner-box .inner-content i {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  position: absolute;
+  top: -20px;
+  right: 10px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  cursor: pointer;
+}
+.section-five .inner-list .inner-box .inner-content p {
+  color: gray;
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+.section-five .inner-list .inner-box .inner-content h3 {
+  font-size: 25px;
+  font-weight: 600;
+  margin-bottom: 30px;
+}
+/* End section five */
+/* Section six */
+.section-six {
+  padding: 100px;
+  background-color: #000;
+}
+.section-six .container .inner-wrap {
+  background-color: #fff;
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-around;
+}
+.section-six .container .inner-wrap .inner-content {
+  margin: 30px;
+  padding: 20px;
+  width: 50%;
+}
+.section-six .container .inner-wrap .inner-content p {
+  color: gray;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+.section-six .container .inner-wrap .inner-content h3 {
+  font-size: 65px;
+}
+.section-six .container .inner-wrap .inner-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  width: 50%;
+  color: gray;
+  padding: 60px 0;
+}
+.section-six .container .inner-wrap .inner-list .item {
+  width: 70%;
+  border: 1px solid gray;
+  border-radius: 10px;
+  padding: 15px;
+  margin: 30px;
+  display: flex;
+  justify-content: space-around;
+  cursor: pointer;
+}
+.section-six .container .inner-wrap .inner-list .item i {
+  font-size: 25px;
+}
+/*End Section six */
