--- a/homework/Day-11/assets/css/style.css
+++ b/homework/Day-11/assets/css/style.css
@@ -6,7 +6,7 @@
   font-family: "Poppins", sans-serif;
 }
 .container {
-  max-width: 1200px;
+  max-width: 1400px;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
@@ -412,5 +412,8 @@ a {
 .footer .inner-wrap .inner-box a {
   margin-left: 20px;
   font-size: 15px;
+}
+.footer .inner-wrap .inner-box a:hover {
+  color: #2e2e2e;
 }
 /* end footer */
