Nộp bài tập ngày 12

--- a/homework/Day-11/assets/css/style.css
+++ b/homework/Day-11/assets/css/style.css
@@ -238,7 +238,7 @@ a {
   background-color: white;
   padding: 30px;
   text-align: center;
-  border: 1px solid transparent;
+  border: 1px solbbbbbbbbbbbid transparent;
   border-radius: 10px;
   width: 100%;
   height: 300px;
